--- a/index.html
+++ b/index.html
@@ -1,150 +1,486 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Glorious Nippon Gallery 💪</title>
-  <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
+    <style>
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: black;
+        }
+
+        li {
+            float: left;
+        }
+
+        li button, .dropbtn {
+            display: inline-block;
+            color: #ffffff;
+            text-align: center;
+            /*padding: 14px 16px;*/
+            text-decoration: none;
+            background-color: #2c2c2c;
+            width: 12em;
+        }
+
+        li button:hover, .dropdown:hover .dropbtn {
+            background-color: red;
+        }
+
+        li.dropdown {
+            display: inline-block;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
+        }
+
+        .dropdown-content button {
+            color: black;
+            /*padding: 12px 16px;*/
+            text-decoration: none;
+            display: block;
+            text-align: left;
+            color: #ffffff
+        }
+
+        /*.dropdown-content a:hover {background-color: #f1f1f1}*/
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+    </style>
 </head>
 <body>
-  <style>
-    html {
-      box-sizing: border-box;
-      background:#ffc600;
-      font-family:'calibri';
-      font-size: 20px;
-      font-weight: 200;
-    }
-    body {
-      margin: 0;
-    }
-    *, *:before, *:after {
-      box-sizing: inherit;
-    }
 
-    .panels {
-      min-height:100vh;
-      overflow: hidden;
-      display: flex;
-    }
+<ul>
+    <li>
+        <button onclick="ADD()">ADD</button>
+    </li>
+    <li>
+        <button onclick="SAVE()">SAVE</button>
+    </li>
+    <!--<li class="dropdown">-->
+    <!--<a href="javascript:void(0)" class="dropbtn">SPECIAL SORT</a>-->
+    <!--<div class="dropdown-content">-->
 
-    .panel {
-      background:#6B0F9C;
-      box-shadow:inset 0 0 0 5px rgba(255,255,255,0.1);
-      color:white;
-      text-align: center;
-      align-items:center;
-      /* Safari transitionend event.propertyName === flex */
-      /* Chrome + FF transitionend event.propertyName === flex-grow */
-      transition:
-        font-size 0.7s cubic-bezier(0.23,0.69, 0.90,0.98),
-        flex 0.7s cubic-bezier(0.31,0.51, 0.74,0.67),
-        background 0.3s;
-      font-size: 15px;
-      background-size:cover;
-      background-position:center;
-      flex: 1;
-      justify-content: center;
-      align-items: center;
-      display: flex;
-      flex-direction: column;
+    <!--<input type="checkbox" id="nameSelected"> Sort by name<br>-->
+    <!--<input type="checkbox" id="qualSelected"> Sort by qualification<br>-->
+    <!--<input type="checkbox" id="vehicleSelected"> Sort by vehicle<br>-->
+    <!--<input type="checkbox" id="distanceSelected"> Sort by distance<br>-->
+    <!--<input type="submit" value="Submit">-->
 
-    }
-
-
-    .panel1 { background-image:url(http://i.imgur.com/AbFYb3u.jpg); }
-    .panel2 { background-image:url(http://i.imgur.com/cKBAJZ9.jpg); }
-    .panel3 { background-image:url(http://i.imgur.com/AanlwKt.jpg); }
-    .panel4 { background-image:url(http://i.imgur.com/ZpPAANZ.jpg); }
-    /*.panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }*/
-
-    .panel > * {
-      margin:0;
-      width: 100%;
-      transition:transform 0.5s;
-      /*border: 1px solid red;*/
-      flex: 1 0 auto;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .panel > *:first-child{transform: translateY(-1000%);}
-    .panel.open-active > *:first-child { transform: translateY(0); }
-    .panel > *:last-child{transform: translateY(1000%);}
-    .panel.open-active > *:last-child {transform: translateY(0);}
-
-    .panel p {
-      text-transform: uppercase;
-      font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
-      text-shadow:0 0 4px rgba(0, 0, 0, 0.72), 0 0 15px rgba(0, 0, 0, 0.45);
-      font-size: 2em;
-    }
-    .panel p:nth-child(2) {
-      font-size: 3em;
-    }
-
-    .panel.open {
-      flex: 5;
-      font-size:20px;
-    }
-
-    .cta {
-      color:white;
-      text-decoration: none;
-    }
-
-  </style>
-
-
-  <div class="panels">
-    <div class="panel panel1">
-      <p>In the day all grey</p>
-      <p>At night a neon light show</p>
-      <p>Next day hangover</p>
-    </div>
-    <div class="panel panel2">
-      <p>In Kyoto</p>
-      <p>Hearing the cuckoo</p>
-      <p>I long for Kyoto</p>
-    </div>
-    <div class="panel panel3">
-      <p>Winter wind--</p>
-      <p>Wearing a straw bag</p>
-      <p>On Mount Hakone</p>
-    </div>
-    <div class="panel panel4">
-      <p>A little person</p>
-      <p>Enters the scene...</p>
-      <p>A little butterfly</p>
-    </div>
-    <!--<div class="panel panel5">-->
-      <!--<p>Life</p>-->
-      <!--<p>In</p>-->
-      <!--<p>Motion</p>-->
     <!--</div>-->
-  </div>
 
-  <script>
-    const panels = document.querySelectorAll('.panel');
+    <li class="dropdown">
+        <a href="javascript:void(0)" class="dropbtn">SORT</a>
 
-    function toggleOpen() {
-      console.log('Hello');
-      this.classList.toggle('open');
+        <div class="dropdown-content">
+            <button onclick="sortName()">SORT NAME</button>
+            <button onclick="sortQual()">SORT QUAL</button>
+            <button onclick="sortVehicle()">SORT VEHICLE</button>
+            <button onclick="sortDistance()">SORT DISTANCE</button>
+        </div>
+    <li>
+        <button onclick="DRAW()">DRAW</button>
+    </li>
+    <li>
+        <button onclick="CLEAR()">CLEAR</button>
+    </li>
+
+</ul>
+
+<p id="driverInfo"></p>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script type="text/javascript" src="jquery.sortElements.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAD2H9bS_-GCDwqR14E9ESCDRoj03s1CJk&callback=initMap">
+</script>
+<script src="https://roads.googleapis.com/v1/snapToRoads?parameters&key=AIzaSyAD2H9bS_-GCDwqR14E9ESCDRoj03s1CJk"></script>
+<script type="text/javascript"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAD2H9bS_-GCDwqR14E9ESCDRoj03s1CJk&libraries=drawing">
+</script>
+
+
+
+<head>
+    <style>
+        table, th, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+    </style>
+</head>
+<body>
+<!--<body background="LM.jpg">-->
+<table id="example" class="display" cellspacing="0" width="100%" align="center">
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Qualification</th>
+        <th>Vehicle</th>
+        <th>Distance</th>
+        <th>Latitude and longitude</th>
+    </tr>
+    </thead>
+    <tbody class="table-body">
+    <tr>
+    </tr>
+    </tbody>
+</table>
+
+<style>
+    /* Always set the map height explicitly to define the size of the div
+     * element that contains the map. */
+    #map {
+        height: 100%;
     }
 
-    function toggleActive(e) {
-      console.log(e.propertyName);
-      if (e.propertyName.includes('flex')) {
-        this.classList.toggle('open-active');
-      }
+     /*Optional: Makes the sample page fill the window. */
+    html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
+</style>
+<div id="map"></div>
+<script>
+
+    var driverDB = [];
+
+    function DriverName() {
+        var name = prompt("Please enter the driver's name", "George");
+        return name;
     }
 
-    panels.forEach(panel => panel.addEventListener('click', toggleOpen));
-    panels.forEach(panel => panel.addEventListener('transitionend', toggleActive));
+    function Qualifications() {
+        var qual = prompt("Please enter the driver's licence type", "Manual");
+        return qual;
+    }
 
-  </script>
+    function Vehicle() {
+        var vehicle = prompt("Please add the type of vehicle the driver drives", "Car");
+        return vehicle;
+    }
 
 
+    function Driver(name, qual, vehicle) {
+        this.name = name;
+        this.qual = qual;
+        this.vehicle = vehicle;
+        this.details = function () {
+            return name + " " + qual + " " + vehicle;
+        }
+    }
 
+    var storageArr = [];
+
+    var lat1 = -27.570904;
+    var lon1 = 153.078524;
+
+    var pathArr = [];
+
+
+    var Latlng = {lat: lat1, lng: lon1};
+
+    var map = new google.maps.Map(document.getElementById('map'), {
+        zoom: 11,
+        center: Latlng,
+        mapTypeId: 'terrain'
+    });
+
+    function ADD() {
+
+        var name = DriverName();
+        var qual = Qualifications();
+        var vehicle = Vehicle();
+
+        var randomAddX = Math.random() * 10;
+        randomAddX *= Math.floor(Math.random() * 2) == 1 ? 1 : -1;
+
+        var randomAddY = Math.random() * 10;
+        randomAddY *= Math.floor(Math.random() * 2) == 1 ? 1 : -1;
+
+        var lat2 = -27.570904 + randomAddX / 100;
+        var lon2 = 153.078524 + randomAddY / 100;
+
+        //console.log(lat1 + "," + lon1 + ", " + lat2 + "," + lon2)
+
+        var R = 6371e3; // metres
+        var lat1R = lat1 * (Math.PI / 180);
+        var lat2R = lat2 * (Math.PI / 180);
+        var lon2R = lon2 * (Math.PI / 180);
+        var lon1R = lon1 * (Math.PI / 180);
+        var deltaLat = (lat2R - lat1R);
+        var deltaLamb = (lon2R - lon1R);
+
+        var distance = 2 * R * Math.asin(
+                        Math.sqrt(
+                                Math.sin(deltaLat / 2) * Math.sin(deltaLat / 2)
+                                + Math.cos(lat1R) * Math.cos(lat2R)
+                                * Math.sin(deltaLamb / 2) * Math.sin(deltaLamb / 2)))
+
+        distance = ((distance / 1000)).toFixed(4);
+
+        var latLong = lat2.toFixed(4) + "," + lon2.toFixed(4);
+
+        var inputData = {
+            'name': name,
+            'qual': qual,
+            'vehicle': vehicle,
+            'distance': distance,
+            'latLong': latLong
+        };
+
+        var pathData = {'lat': lat2, 'lng': lon2, 'distance': distance};
+        pathArr.push(pathData);
+
+        storageArr.push(inputData);
+
+
+        createTable(storageArr, $("#example"));
+
+        initMap(lat1, lon1, lat2, lon2, name, qual, vehicle, distance);
+
+    }
+
+
+    function initMap(lat1, lon1, lat2, lon2, name, qual, vehicle, distance) {
+
+        var original = {lat: lat1, lng: lon1};
+        var LatLng = {lat: lat2, lng: lon2};
+
+        var position = new google.maps.Marker({
+            position: original,
+            map: map,
+            title: 'position',
+            icon: 'darkgreen_MarkerA.png'
+        });
+
+        var marker = new google.maps.Marker({
+            position: LatLng,
+            map: map,
+            title: name + ", " + qual + ", " + vehicle + ", " + distance + "Km",
+            icon: 'orange_MarkerB.png'
+        });
+
+        var sorted = pathArr.sort(function (a, b) {
+            var aValue = Math.abs(parseFloat(a['distance']));
+            var bValue = Math.abs(parseFloat(b['distance']));
+
+            if (typeof aValue && bValue == "number") {
+                return (aValue > bValue) ? 1 : ((bValue > aValue) ? -1 : 0);
+            }
+
+            return (aValue > bValue) ? 1 : ((bValue > aValue) ? -1 : 0);
+        });
+        console.log(sorted);
+
+        pathCoordinate = [{lat: lat1,  lng: lon1}, {lat: sorted[0].lat, lng: sorted[0].lng}];
+
+        line = new google.maps.Polyline({
+            path: pathCoordinate,
+            geodesic: true,
+            strokeColor: '#FF0000',
+            strokeOpacity: 1.0,
+            strokeWeight: 2
+        });
+
+        line.setMap(map);
+        //line.setMap(null);
+
+    }
+
+    var marker ;
+    function createMarker(lat, long,name,map) {
+        var lat = parseFloat(lat);
+        var long = parseFloat(long);
+        var coordinate = {lat: lat, lng: long};
+        marker = new google.maps.Marker({
+            position: coordinate,
+            map: map,
+            title: name,
+            icon: 'darkgreen_MarkerA.png'
+        });
+
+    }
+
+    function SAVE() {
+        var textToSave = JSON.stringify(storageArr);
+
+        var hiddenElement = document.createElement('a');
+
+        hiddenElement.href = 'data:attachment/text,' + encodeURI(textToSave);
+        hiddenElement.target = '_blank';
+        hiddenElement.download = 'myFile.json';
+        hiddenElement.click();
+
+        //console.log()
+    }
+
+    function createTable(arr, table) {
+
+        //delet already existing rows
+        $("#example").find(".table-body").empty();
+
+
+        //create rows with sortable values
+        arr.forEach(function (row) {
+            var newTr = $('<tr/>');
+            $.each(row, function (key, value) {
+                var newCell = $('<td/>')
+                        .text(value)
+                        .addClass(key);
+
+                newTr.append(newCell)
+                        .css("text-align", "center");
+            });
+            $('<td><button class="delete" >Delete</button></td>').appendTo(newTr);
+            $(table).find('.table-body').append(newTr);
+        });
+        $('.delete').click(function () {
+            var idx = $('.delete').index(this);
+            storageArr.splice(idx, 1);
+            $("#example").find(".table-body").empty();
+            createTable(storageArr, $("#example"));
+        })
+
+    }
+
+
+    function appendTableColumn(table, rowData) {
+
+        var lastRow = $('<tr/>').appendTo(table.find('.table-body'));
+        $.each(rowData, function (key, value) {
+            var newCell = $('<td/>')
+                    .text(value)
+                    .addClass(key);
+
+            lastRow.append(newCell)
+                    .css("text-align", "center");
+        });
+
+        $('<td><button class="delete" >Delete</button></td>').appendTo(lastRow);
+
+
+    }
+
+    function onDeleteClick(event) {
+
+        var currentButton = $(event.currentTarget);
+        var currentRow = currentButton.closest("tr");
+
+        currentRow.remove();
+        storageArr.splice(currentButton.closest("tr"), 0);
+    }
+
+    function FIND() {
+
+
+        var num = 25;
+        var nearestObj = null;
+
+        for (var i = 0; i < storageArr.length; i++) {
+            if (storageArr[i].distance < num) {
+                num = storageArr[i].distance;
+                nearestObj = storageArr[i];
+            }
+        }
+
+        //alert("the closest driver is: " + JSON.stringify(nearestObj));
+        console.log("the closest driver is: " + JSON.stringify(nearestObj));
+    }
+
+    var action = 1;
+
+
+    function sortName() {
+        if (action == 1) {
+            finder(storageArr, "name");
+            action = 2;
+        } else {
+            finder2(storageArr, "name");
+            action = 1;
+        }
+    }
+    function sortQual() {
+        if (action == 1) {
+            finder(storageArr, "qual");
+            action = 2;
+        } else {
+            finder2(storageArr, "qual");
+            action = 1;
+        }
+    }
+    function sortVehicle() {
+        if (action == 1) {
+            finder(storageArr, "vehicle");
+            action = 2;
+        } else {
+            finder2(storageArr, "vehicle");
+            action = 1;
+        }
+    }
+    function sortDistance() {
+        if (action == 1) {
+            finder(storageArr, "distance");
+            action = 2;
+        } else {
+            finder2(storageArr, "distance");
+            action = 1;
+        }
+    }
+
+
+    function finder(array, criteria) {
+
+        var sorted = array.sort(function (a, b) {
+            var aValue = a[criteria];
+            var bValue = b[criteria];
+
+            if (criteria == "distance") {
+                aValue = Math.abs(parseFloat(aValue));
+                bValue = Math.abs(parseFloat(bValue));
+                return (aValue > bValue) ? 1 : ((bValue > aValue) ? -1 : 0);
+            }
+
+            return (aValue > bValue) ? 1 : ((bValue > aValue) ? -1 : 0);
+        });
+
+        createTable(sorted, $("#example"));
+    }
+
+    function finder2(array, criteria) {
+
+        var sorted = array.sort(function (a, b) {
+            var aValue = a[criteria];
+            var bValue = b[criteria];
+
+            if (criteria == "distance") {
+                aValue = Math.abs(parseFloat(aValue));
+                bValue = Math.abs(parseFloat(bValue));
+                return (aValue > bValue) ? 1 : ((bValue > aValue) ? -1 : 0);
+            }
+
+            return (aValue > bValue) ? 1 : ((bValue > aValue) ? -1 : 0);
+        });
+
+        createTable(sorted, $("#example"));
+    }
+
+
+    function CLEAR() {
+        $("#example").find(".table-body").empty();
+        var emptyArr = [];
+        storageArr = [];
+        createTable(emptyArr, $("#example"));
+    }
+
+</script>
 </body>
 </html>
