--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Sticky Nav</title>
+  <title>SoxBox</title>
   <link rel="stylesheet" href="style-START.css">
 </head>
 <body>
